# mc-launcher

./: .gitignore  LICENSE  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
src/: App.tsx  event.ts  ipc.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  req.xml  request.xml  tauri.conf.json  window-app-manifest.xml
src-tauri/resources/: download_request.xml
src-tauri/src/: consts.rs  error.rs  main.rs  utils.rs
src-tauri/src/ipc/: game.rs  mod.rs  response.rs  settings.rs
src-tauri/src/model/: downloader.rs  game.rs  ipc_structs.rs  mod.rs  profile.rs  settings.rs  utils.rs  version.rs
src/components/: DirectoryPicker.tsx  Dropdown.tsx  DropdownList.tsx  EditButton.tsx  EditDialog.tsx  Footer.tsx  GameBackground.tsx  GameElement.tsx  GameList.tsx  GameName.tsx  Icon.tsx  LeftPanel.tsx  LoadingImage.tsx  PageArea.tsx  PlayButton.tsx  ProfileDropdown.tsx  ProfileElement.tsx  ProfileList.tsx  SettingsButton.tsx  Title.tsx  VersionDropdown.tsx  VersionElement.tsx  Window.tsx
src/store/: games.ts  index.ts  profiles.ts  settings.ts  versions.ts
~/.tauri/: myapp.key  myapp.key.pub
