[package]
name = "mc-launcher"
version = "0.0.0"
description = "A Tauri App"
authors = ["MajestikButter"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tokio = { version = "1.3", features = ["full"] }
tauri = { version = "1.5.4", features = [ "dialog-open", "shell-open", "protocol-asset", "path-all", "dialog" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.0", features = ["json"] }
windows = { version = "0.52.0", features = [ "ApplicationModel", "Foundation_Collections", "Management_Deployment", "Foundation", "System" ] }
winapi = "0.3.5"
windows-acl = "0.3.0"
directories = "5.0"
xmltree = "0.10.3"
chrono = { version = "0.4.31", features = ["clock"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
