[package]
name = "mc-launcher"
version = "0.0.1"
description = "A Tauri App"
authors = ["MajestikButter"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tokio = { version = "1.3", features = ["full"] }
tauri = { version = "1.5.4", features = [ "updater", "cli", "dialog-open", "shell-open", "protocol-asset", "path-all", "dialog", "devtools" ] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
log = "^0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.0", features = ["json", "stream"] }
windows = { version = "0.52.0", features = [ "ApplicationModel", "Foundation_Collections", "Management_Deployment", "Foundation", "System" ] }
winapi = "0.3.5"
windows-acl = "0.3.0"
directories = "5.0"
chrono = { version = "0.4.31", features = ["clock"] }
regex = "1.10.3"
zip = "0.6"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
